Add delete category endpoint
